--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "src/server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon --inspect src/server.js"
+    "start": "nodemon --inspect src/server.js",
+    "build": "webpack --config src/webpack.config.js"
   },
   "author": "",
   "license": "ISC",
@@ -13,6 +14,9 @@
     "body-parser": "^1.20.2",
     "express": "^4.19.2",
     "multer": "^1.4.5-lts.1",
-    "nodemon": "^3.1.4"
+    "nodemon": "^3.1.4",
+    "process": "^0.11.10",
+    "webpack": "^5.92.1",
+    "webpack-cli": "^5.1.4"
   }
 }
